ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 141.41.235.40 in
-A ufw-user-input -p tcp --dport 80 -s 141.41.235.40 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 141.41.235.40 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 141.41.9.5 in
-A ufw-user-input -p tcp --dport 80 -s 141.41.9.5 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 141.41.9.5 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 141.41.235.41 in
-A ufw-user-input -p tcp --dport 80 -s 141.41.235.41 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 141.41.235.41 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 139.13.81.25 in
-A ufw-user-input -p tcp --dport 80 -s 139.13.81.25 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 139.13.81.25 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 141.2.22.7 in
-A ufw-user-input -p tcp --dport 80 -s 141.2.22.7 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 141.2.22.7 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 195.37.211.41 in
-A ufw-user-input -p tcp --dport 80 -s 195.37.211.41 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 195.37.211.41 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 139.174.32.37 in
-A ufw-user-input -p tcp --dport 80 -s 139.174.32.37 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 139.174.32.37 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 141.71.9.192 in
-A ufw-user-input -p tcp --dport 80 -s 141.71.9.192 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 141.71.9.192 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 194.94.76.22 in
-A ufw-user-input -p tcp --dport 80 -s 194.94.76.22 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 194.94.76.22 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 193.175.122.172 in
-A ufw-user-input -p tcp --dport 80 -s 193.175.122.172 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 193.175.122.172 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 143.93.155.29 in
-A ufw-user-input -p tcp --dport 80 -s 143.93.155.29 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 143.93.155.29 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 134.76.21.233 in
-A ufw-user-input -p tcp --dport 80 -s 134.76.21.233 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 134.76.21.233 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 141.41.9.49 in
-A ufw-user-input -p tcp --dport 80 -s 141.41.9.49 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 141.41.9.49 -j ACCEPT

### tuple ### allow any 8080 0.0.0.0/0 any 131.173.168.5 in
-A ufw-user-input -p tcp --dport 8080 -s 131.173.168.5 -j ACCEPT
-A ufw-user-input -p udp --dport 8080 -s 131.173.168.5 -j ACCEPT

### tuple ### allow any 8080 0.0.0.0/0 any 131.173.18.109 in
-A ufw-user-input -p tcp --dport 8080 -s 131.173.18.109 -j ACCEPT
-A ufw-user-input -p udp --dport 8080 -s 131.173.18.109 -j ACCEPT

### tuple ### allow any 8080 0.0.0.0/0 any 141.41.9.5 in
-A ufw-user-input -p tcp --dport 8080 -s 141.41.9.5 -j ACCEPT
-A ufw-user-input -p udp --dport 8080 -s 141.41.9.5 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m state --state INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
